fixed padding under nav on mobile

--- a/src/css/_partials/nav.styl
+++ b/src/css/_partials/nav.styl
@@ -65,6 +65,9 @@ nav
             text-decoration none
 
 @media(max-width: breakpointSmall)
+  body
+    padding-top 7.6rem
+    
   nav 
 
     .nav
